--- a/404.md
+++ b/404.md
@@ -3,6 +3,6 @@ layout: page
 title: 404 - Página no encontrada
 ---
 
-Lo sentimos, no podemos encontrar la página que estás buscando.
+Lo sentimos, no ha sido posible encontrar la página que estás buscando.
 
 [<img src="{{ site.baseurl }}/images/404.jpg" alt="Constructocat by https://github.com/jasoncostello" style="width: 400px;"/>]({{ site.baseurl }}/)
