--- a/404.md
+++ b/404.md
@@ -5,4 +5,4 @@ title: 404 - Página no encontrada
 
 Lo sentimos, no ha sido posible encontrar la página que estás buscando. Prueba con otra diferente.
 
-[<img src="{{ site.baseurl }}/images/404.jpg" alt="Constructocat by https://github.com/jasoncostello" style="text-align:center;width: 400px;"/>]({{ site.baseurl }}/)
+<img src="{{ site.baseurl }}/images/404.jpg" style="text-align:center;width: 400px;"/>
