--- a/404.md
+++ b/404.md
@@ -3,6 +3,7 @@ layout: page
 title: 404 - Página no encontrada
 ---
 
-Lo sentimos, no ha sido posible encontrar la página que estás buscando. Prueba con otra diferente.
+<span style="text-align:center;>Lo siento, no ha sido posible encontrar la página que estás buscando. Prueba con otra diferente.
 
-<img src="{{ site.baseurl }}/images/404.jpg" style="text-align:center;width: 400px;"/>
+<img src="{{ site.baseurl }}/images/404.jpg" style="width:400px;"/>
+</span>
