--- a/404.md
+++ b/404.md
@@ -6,5 +6,5 @@ title: 404 - Página no encontrada
 <div style="text-align:center;">
   Lo siento, no ha sido posible encontrar la página que estás buscando. Prueba con otra diferente.
 
-  <img src="{{ site.baseurl }}/images/404.jpg" style="width:400px;"/>
+  <div><img src="{{ site.baseurl }}/images/404.jpg" style="width:400px;"/></div>
 </div>
