--- a/404.md
+++ b/404.md
@@ -3,8 +3,8 @@ layout: page
 title: 404 - Página no encontrada
 ---
 
-<div style="text-align:center;">
+<div>
   Lo siento, no ha sido posible encontrar la página que estás buscando. Prueba con otra diferente.
 
-  <div><img src="{{ site.baseurl }}/images/404.jpg" style="width:400px;"/></div>
+  <div style="text-align:center;"><img src="{{ site.baseurl }}/images/404.jpg" style="width:400px;"/></div>
 </div>
